--- a/.github/workflows/digital-ocean.yml
+++ b/.github/workflows/digital-ocean.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: digitalocean/app_action@v1.1.5
         with:
-          app_name: fastboard-web-app
+          app_name: fastboard
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
