--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
     "@nextui-org/react": "^2.4.1",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
