--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@nextui-org/react": "^2.4.1",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
