--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "recoil": "^0.7.7"
