--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@nextui-org/react": "^2.4.1",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "recoil": "^0.7.7"
   },
