--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-json-view-lite": "^1.4.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
