--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-json-view-lite": "^1.4.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
