--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@nextui-org/react": "^2.4.1",
+    "@tanstack/react-query": "^5.51.1",
+    "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
