--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nextui-org/react": "^2.4.1",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "iconsax-react": "^0.0.8",
+    "lucide-react": "^0.408.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -25,7 +28,10 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-json-view-lite": "^1.4.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
