--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@nextui-org/react": "^2.4.1",
     "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-query-devtools": "^5.51.18",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
