--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
-    "@nextui-org/react": "^2.4.1",
+    "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.18",
     "axios": "^1.7.2",
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-json-view-lite": "^1.4.0",
+    "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
