--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.18",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
