--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="storage-bucket"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="message-sender-id"
 NEXT_PUBLIC_FIREBASE_APP_ID="app-id"
 
+NEXT_PUBLIC_BASE_URL="base_url"
 NEXT_PUBLIC_API_URL="api-url"
