--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-json-view-lite": "^1.4.0",
+    "react-player": "^2.16.0",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "sonner": "^1.5.0",
