--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.18",
     "@tanstack/react-table": "^8.20.5",
