--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-query-devtools": "^5.51.18",
     "@tanstack/react-table": "^8.20.5",
+    "@types/chroma-js": "^2.4.4",
     "axios": "^1.7.2",
+    "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
